--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/mhnvelu/webpack-tutorial#readme",
   "devDependencies": {
+    "bootstrap": "^4.5.0",
     "css-loader": "^3.6.0",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
