--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/mhnvelu/webpack-tutorial#readme",
   "devDependencies": {
     "bootstrap": "^4.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
